--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
+# Configuração Mysql JPA
+
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
@@ -5,3 +7,20 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Configurações SMTP Gmail
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=
+spring.mail.password=
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
+
+
+
+
